# purchase-agency

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/models/: database.py  product.py
app/routers/: home_router.py  product_router.py
app/scraper/: __init__.py  amazon_scraper.py  base_scraper.py  cache_manager.py  ebay_scraper.py  generic_scraper.py  product_scraper.py  vvic_scraper.py
app/services/: product_service.py
app/static/css/: custom.css
app/templates/: base.html  debug.html  error.html  home.html  product_ai_detail.html  product_detail.html  product_edit.html  product_form.html  product_image_translate.html  product_list.html  product_result.html
app/tests/: test_scrapers.py
app/utils/: __init__.py  ai_detail_generator.py  amazon_scraper.py  base_scraper.py  cache_manager.py  ebay_scraper.py  generic_scraper.py  image_processing.py  product_scraper.py  templates.py  translate.py  vvic_scraper.py
data/: database.sqlite
scripts/: amz-crawl.py  setup.ps1  setup.sh
systemd/: purchase-agency.service
